# quantum-error-mitigation

./: .gitignore  CITATION.cff  FINAL_CHECKLIST.md  FINAL_RESULTS.md  LICENSE  LITERATURE_VALIDATION.md  PAPER.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  VALIDATION_REPORT.md  debug_phase_damping.py  pyproject.toml  requirements.txt  verify_fix_param.py  verify_noise_physics.py
experiments/: plot_accuracy.py  plot_molecule_comparison.py  plot_paper_results.py  plot_residuals.py  plot_rl_policy_map.py  plot_synergy_landscape.py  run_grid.py  run_h2_grid.py
paper_assets/: figures_h2.py
pl_rust_device/: __init__.py  device.py
python_bindings/: Cargo.toml
python_bindings/src/: lib.rs
rl_agent/: env.py  policy.py  train_ppo.py
rust_sim/: Cargo.toml
rust_sim/src/: density_matrix.rs  gates.rs  lib.rs  noise_model.rs  simulator.rs
tests/: test_enhancements.py
vqe_qem/: ansatz.py  circuit_telemetry.py  h2_system.py  noise_models.py  sampling_eval.py  strategies.py  system_factory.py  vqe_runner.py
