[package]
name = "rust_sim"
version = "0.1.0"
edition = "2021"
description = "Core Rust density matrix simulator for Quantum Error Mitigation"

[lib]
name = "rust_sim"
# crate-type = ["cdylib", "rlib"] # Not needed for pure Rust lib

[dependencies]
nalgebra = "0.32"
num-complex = "0.4"
rayon = "1.7"
rand = "0.8"
rand = "0.8"

[dev-dependencies]
approx = "0.5"
